Fix specialites vertical align

--- a/specialites.css
+++ b/specialites.css
@@ -78,6 +78,12 @@ h4 {
 .container{
   margin-bottom: 100px;
   margin-top:100px;
+  display: flex;
+  align-items: center;
+}
+
+h2 {
+    margin-top: 0;
 }
 
 #sub {
